[gd_scene load_steps=17 format=3 uid="uid://dxonauxryev1t"]

[ext_resource type="Texture2D" uid="uid://ctsctetvivqlq" path="res://art/selector.png" id="1"]
[ext_resource type="Script" path="res://screens/character_select/Cursor.gd" id="2"]

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("1")
region = Rect2(64, 0, 32, 8)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("1")
region = Rect2(32, 0, 32, 8)

[sub_resource type="SpriteFrames" id="1"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("10")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("9")
}],
"loop": true,
"name": &"selected",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("1")
region = Rect2(64, 24, 32, 8)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("1")
region = Rect2(32, 24, 32, 8)

[sub_resource type="SpriteFrames" id="7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("8")
}],
"loop": true,
"name": &"selected",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("1")
region = Rect2(64, 8, 8, 16)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("1")
region = Rect2(32, 8, 8, 16)

[sub_resource type="SpriteFrames" id="12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("11")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("13")
}],
"loop": true,
"name": &"selected",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("1")
region = Rect2(88, 8, 8, 16)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("1")
region = Rect2(56, 8, 8, 16)

[sub_resource type="SpriteFrames" id="16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("14")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("15")
}],
"loop": true,
"name": &"selected",
"speed": 5.0
}]

[node name="Cursor" type="Node2D"]
script = ExtResource("2")

[node name="Background" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("3")
centered = false

[node name="Player1" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 4)
sprite_frames = SubResource("1")

[node name="Player2" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 28)
sprite_frames = SubResource("7")
animation = &"selected"

[node name="Player3" type="AnimatedSprite2D" parent="."]
position = Vector2(4, 16)
sprite_frames = SubResource("12")

[node name="Player4" type="AnimatedSprite2D" parent="."]
position = Vector2(28, 16)
sprite_frames = SubResource("16")
